--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.19.5",
+    "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.1",
@@ -16,6 +19,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
