--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "@reduxjs/toolkit": "^1.8.1",
+    "D": "^1.0.0",
     "antd": "^4.19.5",
     "chart.js": "^3.7.1",
     "chartjs-plugin-datalabels": "^2.0.0",
@@ -12,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
@@ -47,6 +49,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "socket.io-mock": "^1.3.2"
   }
 }
